--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "@tanstack/react-query": "^4.14.1",
     "axios": "^1.1.3",
     "nprogress": "^0.2.0",
