--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.7.3",
     "@tanstack/react-query": "^4.14.1",
     "axios": "^1.1.3",
+    "formik": "^2.2.9",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
