--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.7.3",
     "@tanstack/react-query": "^4.14.1",
     "axios": "^1.1.3",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.3.2",
     "formik": "^2.2.9",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
