--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-datetime-picker": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
