--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@tanstack/react-query": "^4.14.1",
+    "antd": "^4.24.1",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
     "formik": "^2.2.9",
+    "formik-antd": "^2.0.4",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
-    "react-datepicker": "^4.8.0",
-    "react-datetime-picker": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
