--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@tanstack/react-query": "^4.14.1",
+    "@tanstack/react-table": "^8.5.30",
     "antd": "^4.24.1",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
